--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="col-lg-12 count-color col-md-12 col-xxl-12 col-xl-12 col-12 p-xl-4 p-lg-4 p-md-4">
     <!-- this area for main div -->
     <div class="container col-xl-12 col-lg-12 col-md-12  col-12">
-    <div class="main col-xl-11 col-md-11 col-lg-11  col-11 m-auto  ">
+    <div class="main col-xl-11 col-md-11 col-lg-11  col-11 m-auto  pb-3 ">
             <nav>
                 <!-- this area for navigation bar -->
                 <div class="logo col-3 ms-2 mt-2"> <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -65,15 +65,15 @@
             </div>
             <div class="box-setup col-11 d-flex justify-content-between ">
                 <div class="box-1 d-grid ">
-                    <span style="font-size:25px; color:#1D9641; font-weight: 900; "> 80+</span> 
+                    <span style="font-size:25px; color:#1D9641; font-weight: 900;" > <span id="count-80" ></span>+</span> 
                     <span >Satified Client</span>
                 </div >
                 <div class="box-2 d-grid" >
-                     <span style="font-size:25px; color:#1D9641; font-weight: 900; "> 200+</span> 
+                     <span style="font-size:25px; color:#1D9641; font-weight: 900; "> <span id="count-200"></span> +</span> 
                      <span >Satified Client</span>
                 </div>
                 <div class="box-3 d-grid" >
-                     <span style="font-size:25px; color:#1D9641; font-weight: 900; ">99+</span> 
+                     <span style="font-size:25px; color:#1D9641; font-weight: 900; "> <span id="count-99"></span>+</span> 
                      <span >Satified Client</span>
                 </div>
                 
@@ -201,14 +201,14 @@
                         </div>
                     </div>
 
-                <div class="footer-box col-11 m-auto mt-5 d-flex justify-content-between">
+                <div class="footer-box col-11 m-auto mt-5 mb-5  d-flex justify-content-between">
                     <div class="fotter-box-mini-1">
                         @ 2023. All Right Reserved 
                     </div>
                     <div class="fotter-box-mini-1">
                         Designed By Vinod Mehra
                     </div>
-                    <div class="fotter-box-mini-1 ">
+                    <div class="fotter-box-mini-1  ">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-facebook" viewBox="0 0 16 16">
                             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                           </svg>
